--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <div class="bacground">
       <div>
         <div>
-          <h1>Hi, I'm Brooklin! <img src="/images/Sign of the Horns.png" /></h1>
+          <h1>Hi, I'm Araz! <img src="/images/Sign of the Horns.png" /></h1>
         </div>
         <div>
           <h4>
-            a <span> UX Designer </span> <br />with
+            a <span> Web Designer </span> <br />with
             <img src="/images/Emoji.png" />
             years experience <br />working at
-            <span>Fraxos</span>
+            <span> FREELANCE</span>
             <div><img src="/images/Scroll Button.png" /></div>
           </h4>
         </div>
