--- a/index.html
+++ b/index.html
@@ -174,12 +174,13 @@
           <div class="topic2">
             Currently <span> <i>Service and Interaction Designer</i></span> @
             <img src="/images/BuildingIcon.png" />
-            <span>Fraxos </span>office. Recently graduated from UC Berkeley,
-            focusing on Interaction <br />Design & Design Emerging Technology.
+            <span>Fraxos </span>office. <br />Recently graduated from UC
+            Berkeley, focusing on Interaction <br />Design & Design Emerging
+            Technology.
           </div>
 
           <div class="topic3">
-            Formerly at Electronic Arts, Apple, Sea Group, Deutsche Bank and
+            Formerly at Electronic Arts, Apple, Sea Group, Deutsche Bank and<br />
             JPMorgan Chase & Co.
           </div>
         </div>
