--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
             well-crafted mobile and web apps by connecting business goals
             <br />with user needs
           </div>
-
           <div class="topic2">
             Currently <span> <i>Service and Interaction Designer</i></span> @
             <img src="/images/BuildingIcon.png" />
@@ -178,9 +177,8 @@
             Berkeley, focusing on Interaction <br />Design & Design Emerging
             Technology.
           </div>
-
           <div class="topic3">
-            Formerly at Electronic Arts, Apple, Sea Group, Deutsche Bank and<br />
+            Formerly at Electronic Arts, Apple, Sea Group, Deutsche Bank and
             JPMorgan Chase & Co.
           </div>
         </div>
