--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>selectors</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <nav>
@@ -363,6 +364,61 @@
         </div>
         <hr class="new4" />
       </div>
+    </div>
+    <div class="separatorr">
+      <div>
+        <div class="line-h"></div>
+        <div class="line-v"></div>
+      </div>
+      <div><img src="/images/iko.png" />RECENT NEWS</div>
+      <div>
+        <div class="line-v"></div>
+        <div class="line-h"></div>
+      </div>
+    </div>
+
+    <div class="newss2">
+      <div class="develops2">
+        <img src="/images/sekilll2.png" />
+        <p>By Admin - Developing - July 19, 2022</p>
+        <div class="develops3">
+          The best design tools in 2022 for prototyping
+        </div>
+        <p>
+          It is a long established fact that a reader will be distracted the
+          readable content of a page when looking at its layout.
+        </p>
+        <button type="button" class="buttonns">
+          View Post <img src="/images/ox.png" />
+        </button>
+      </div>
+      <div class="templatte">
+        <img src="/images/sekilll1.png" />
+        <p>By Admin - Developing - July 19, 2022</p>
+        <div class="templatte1">
+          How do you use time tracking for your projects?
+        </div>
+        <p>
+          It is a long established fact that a reader will be distracted the
+          readable content of a page when looking at its layout.
+        </p>
+        <button type="button" class="buttonns">
+          View Post <img src="/images/ox.png" />
+        </button>
+      </div>
+    </div>
+    <div class="futer">
+      <div class="above">
+        <img src="/images/daire.png" />
+        <span
+          >Work <img src="/images/komp.png" /> Get in Touch
+          <img src="/images/ell.png" /> Availablefor Work
+          <img src="/images/komp.png" /> Get in Touch
+          <img src="/images/ell.png" /> Availablefor Work
+        </span>
+        <hr class="wan" />
+      </div>
+      <div></div>
     </div>
   </body>
 </html>
