--- a/index.html
+++ b/index.html
@@ -418,7 +418,33 @@
         </span>
         <hr class="wan" />
       </div>
-      <div></div>
+      <div class="below">
+        <div class="below1">
+          <span>Home</span>
+          <span>Work</span>
+          <span>Me</span>
+        </div>
+        <div class="below2">
+          <span>LinkedIn </span>
+          <span>Instagram</span>
+          <span>Twitter</span>
+        </div>
+        <div class="below3">
+          <span
+            >Interested in working together? Drop me a line
+            <button type="button" class="buttoonns">
+              <img src="/images/copy.png" /> Copy Email
+            </button></span
+          >
+        </div>
+      </div>
+      <hr class="wan1" />
+      <div class="webflow">
+        <span>
+          Copyright © Designerz | Designed by VictorFlow Templates - Powered by
+          Webflow</span
+        >
+      </div>
     </div>
   </body>
 </html>
