--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           Standard dummy text ever since the 1500s, when unknown printer took a
           galley of type and scrambled it to make a type specimen book
         </p>
-        <button type="button" class="buttonn">Coming Soon</button>
+        <button type="button" class="btn">Coming Soon</button>
       </div>
       <div class="template">
         <img src="/images/shekill1.jpg" />
@@ -154,7 +154,7 @@
           It is a long established fact that a reader will be distracted by the
           readable content of a page.
         </p>
-        <button type="button" class="buttonns">Coming Soon</button>
+        <button type="button" class="btn">Coming Soon</button>
       </div>
     </div>
     <div class="back-color">
